Move script testing to separate module, improve test portability (#3785)
Co-authored-by: Michael Keppler <Bananeweizen@users.noreply.github.com>