@@ -10,40 +10,21 @@
  *
  * Copyright 2012-2025 the original author or authors.
  */
-package org.assertj.core.testkit;
+package org.assertj.scripts;
 
 import static org.junit.platform.commons.support.ReflectionSupport.findAllResourcesInPackage;
 
-import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URL;
 import java.nio.file.Path;
 import java.util.List;
+
 import org.junit.platform.commons.support.Resource;
 
-public class ClasspathResources {
+class ClasspathResources {
 
-  public static File resourceFile(String resourceName) {
-    return new File(resourceURI(resourceName));
-  }
-
-  public static Path resourcePath(String resourceName) {
-    return Path.of(resourceURI(resourceName));
-  }
-
-  public static URL resourceURL(String resourceName) {
-    try {
-      return resourceURI(resourceName).toURL();
-    } catch (MalformedURLException e) {
-      throw new RuntimeException(e);
-    }
-  }
-
-  public static URI resourceURI(String resourceName) {
+  static Path resourcePath(String resourceName) {
     List<Resource> resources = findAllResourcesInPackage("", resource -> resource.getName().equals(resourceName));
     if (resources.size() != 1) throw new IllegalStateException("Unique resource not found: " + resources);
-    return resources.get(0).getUri();
+    return Path.of(resources.getFirst().getUri());
   }
 
 }
